# rust-dns-backend

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TEST_SETUP.md  config.example.toml  dns-stress-test.sh  docker-compose.yml  security-review.md  test_postgres_setup.sh  test_upstream_logging.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
benchmark/: Cargo.toml  README.md  compare-dns.rs  dnsperf-tcp-release.txt  dnsperf-udp-release.txt  generate_doh.js  k6-results-doh.txt  k6_doh.js  prepare_doh_payloads.py  quick-test.sh  run-compare.sh
benchmark/datasets/: top-10k-dnsperf.txt  top-10k-doh.txt  top-10k.txt
benchmark/src/: main.rs
benchmarks/: docker-compose.yml  run-benchmark.sh
benchmarks/adguard-config/: AdGuardHome.yaml
benchmarks/results/: benchmark-20260303-113711.txt  benchmark-20260303-114059.txt  benchmark-20260304-122055.txt  raw-adguard-20260303-114042.txt  raw-adguard-20260303-114247.txt  raw-rust-dns-20260303-114247.txt
deploy/: ent-dns.service  install.sh
docs/ceo/: strategy-review.md
docs/critic/: database-migration-review.md  risk-review.md
docs/cto/: architecture-review.md  database-adr.md  upstream-health-design.md
docs/devops/: deployment-review.md  releases.md
docs/fullstack/: dashboard-time-range-fix.md  postgres-test-results.md  test-migration-to-postgres.md
docs/fullstack-dhh/: upstream-health-impl.md
docs/product/: product-review.md
docs/qa/: integration-test-report.md  quality-report-2026-02-23.md  test-report-security-improvements.md
docs/research/: database-options.md  market-review.md
docs/ui/: design-system.md
frontend/: dist
migrations/: 20260302152718_add_upstream_strategy_to_settings.sql
scripts/: backup.sh  deploy.sh  dev-restart.sh  smoke-test.sh
security-results/: security-scan-20260301_075108.json
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
src/api/: mod.rs  router.rs
src/api/handlers/: alerts.rs  audit_log.rs  auth.rs  backup.rs  cache.rs  client_groups.rs  clients.rs  dashboard.rs  doh.rs  doh.rs.disabled  domain_check.rs  filter_stats.rs  filters.rs  insights.rs  metrics.rs  mod.rs  query_log.rs  query_log_advanced.rs  query_log_templates.rs  rewrites.rs  rule_stats.rs  rule_validation.rs  rules.rs  sandbox.rs  settings.rs  upstreams.rs  users.rs  ws.rs
src/api/middleware/: audit.rs  auth.rs  client_ip.rs  mod.rs  rbac.rs
src/api/routes/: query_log.rs
src/api/validators/: domain.rs  ip.rs  mod.rs  rule.rs
src/auth/: jwt.rs  password.rs  rbac.rs
src/db/: app_catalog_cache.rs  audit.rs  mod.rs  query_log_writer.rs
src/db/migrations/: 001_initial.sql  002_add_upstreams.sql  003_security_fixes.sql  004_query_log_indexes.sql  005_query_log_templates.sql  006_client_groups.sql  007_default_query_log_templates.sql  008_upstream_latency_log.sql  009_app_catalog.sql  010_query_log_norm_index.sql  011_upstream_ms.sql  012_rename_to_ns.sql  013_insights_perf_index.sql  014_filter_update_interval.sql  015_query_log_app_id.sql  016_parental_control.sql  017_oisd_data.sql  018_oisd_phase1_test.sql  019_add_missing_optimization_indexes.sql  020_alerts.sql  021_upstream_strategy.sql  022_cleanup_duplicate_index.sql  023_fix_rule_id_type.sql  024_fix_rule_id_type_conditional.sql  025_filter_list_url_unique.sql  026_alert_mutes.sql  027_add_rule_expires_at.sql  028_fix_boolean_columns.sql  029_fix_column_types.sql
src/db/models/: alert.rs  client.rs  client_group.rs  filter.rs  log.rs  mod.rs  rewrite.rs  rule.rs  upstream.rs  user.rs
src/dns/: acl.rs  cache.rs  filter.rs  handler.rs  mod.rs  resolver.rs  rules.rs  server.rs  subscription.rs  upstream_pool.rs
src/utils/: arp.rs
tests/: alerts_sandbox_e2e.rs  api_integration.rs  client_groups_e2e.rs  graceful_shutdown.rs  oisd_performance_test.rs  rbac_integration.rs  sqlite_performance_test.rs  test_sqlite_performance.sh
tests/loadtest/: README.md  api-write-test.js  collect-metrics.sh  dns-qps-test.sh  domains.txt  stability-test.sh
tests/loadtest/results/qps-test-20260220-121358/: 100-qps.txt
tests/loadtest/results/stability-20260220-122726/: stability-5min.txt
tests/results/qps-test-20260220-114233/: comparison.txt  summary.txt
tests/results/qps-test-20260220-115134/: comparison.txt  summary.txt
tests/results/qps-test-20260220-120053/: comparison.txt  summary.txt
